# software_printhead_module

./: .gitmodules  CMakeLists.txt  README.md  cirlce_printing_algorithm.py  meteorApp.cpp  meteorApp.sln  meteorApp.vcxproj  meteorApp.vcxproj.filters
Debug/: PrinterInterface.lib
Debug/meteorApp.tlog/: CL.read.1.tlog  CL.write.1.tlog  meteorApp.lastbuildstate
Dep/meteor/: CMakeLists.txt
Dep/meteor/include/: Meteor.h  PrinterInterface.h  typedef.h
Dep/meteor/lib/: PrinterInterface.lib  PrinterInterfaceCLS.xml
Meteor_Sample_Apps/SamplePrintCpp/: Bitmaps.h  MeteorPath.cpp  SamplePrint.cpp  SamplePrint.h  SamplePrint.sln  SamplePrint.vcxproj  SamplePrint.vcxproj.filters  main.cpp  readme.txt  stdafx.h
docs/: PrinterInterfaceCLS.chm
docs/TechnicalNotes/: readme.txt
docs/TechnicalNotes/ConfigEngine/: 1_PeAdressing.txt  2_PeParameters.txt  3_PeParamsAPI.txt
docs/TechnicalNotes/HeadInfo/DataLase/: CalibrationDataInfo.txt  ConfigParameters.txt  DriverSignals.txt
docs/TechnicalNotes/HeadInfo/Dimatix/GMA33/: WF_Info.txt
docs/TechnicalNotes/HeadInfo/Dimatix/GMA65/: ConfigParameters.txt  HMB-4GMA65.txt
docs/TechnicalNotes/HeadInfo/Dimatix/QClass/: ConfigParameters_PQ512.txt  ConfigParameters_QS256.txt  HDC_Layout_Notes.txt  WF_Info_PQ512_QS256.txt
docs/TechnicalNotes/HeadInfo/Dimatix/SG1024/: AdjNozzleRowPositions.txt  TemperatureControl.txt  WF_Info.txt
docs/TechnicalNotes/HeadInfo/Dimatix/SG600/: ConfigParameters.txt  HDC_InputVoltageMonitoring.txt  HeadEEPROM.txt  TemperatureControl.txt  WF_Info.txt
docs/TechnicalNotes/HeadInfo/Dimatix/Samba/: ConfigParameters.txt  FineRowAdjustments.txt  Samba_600_Y_DPI.txt  Samba_HDC_PDS_Info.txt  Temperatures.txt  WF_Info.txt
docs/TechnicalNotes/HeadInfo/Dimatix/Spectra/: SpectraWaveform.txt  Temperatures.txt
docs/TechnicalNotes/HeadInfo/Epson/I1600/: I1600_ConfigNotes.txt  I1600_NozzleLayout.txt
docs/TechnicalNotes/HeadInfo/Epson/I3200/: ConfigParameters.txt  HMB-3EI3200_ConfigNotes.txt  HeadEepromData.txt  I3200HD_NozzleLayout.txt  I3200_HD_Types.txt  I3200_NozzleLayout.txt  Voltages_Temperatures.txt  WF_Info.txt
docs/TechnicalNotes/HeadInfo/Epson/S1600/: ConfigParameters.txt  HeadEepromData.txt  S1600_ASIC_Stitching.txt  Voltages_Temperatures.txt  WF_Info.txt
docs/TechnicalNotes/HeadInfo/Epson/S3200/: ConfigParameters.txt  HeadEepromData.txt  S3200_ASIC_Stitching.txt  Voltages_Temperatures.txt  WF_Info.txt  WaveformsScaling.txt
docs/TechnicalNotes/HeadInfo/Epson/S800/: ConfigParameters.txt  Voltages_Temperatures.txt  WF_Info.txt
docs/TechnicalNotes/HeadInfo/KonicaMinolta/KM1024/: ConfigParameters.txt  WF_Info.txt
docs/TechnicalNotes/HeadInfo/KonicaMinolta/KM1024A/: ConfigParameters.txt  HeadSubTypes.txt  WF_Info.txt
docs/TechnicalNotes/HeadInfo/KonicaMinolta/KM1280I/: ConfigParameters.txt  WF_Info.txt
docs/TechnicalNotes/HeadInfo/KonicaMinolta/KM1800I_KM1024I/: ConfigParameters.txt  FineRowsAdjustments.txt  HeadEepromData.txt  WF_Info.txt  WF_V2_Info.txt
docs/TechnicalNotes/HeadInfo/KonicaMinolta/KM300_KM600/: ConfigParameters.txt  WF_Info.txt
docs/TechnicalNotes/HeadInfo/Kyocera/: Kyocera_PixelMode_MeniscusActivation.txt
docs/TechnicalNotes/HeadInfo/Kyocera/K1200/: ConfigParameters.txt  HeadEepromData.txt  HeadVoltagesTemperatures.txt
docs/TechnicalNotes/HeadInfo/Kyocera/K300/: HeadInputVoltageCommand.txt
docs/TechnicalNotes/HeadInfo/Kyocera/K600/: PDC-2K600.txt
docs/TechnicalNotes/HeadInfo/Kyocera/KJ4/: DelaySelect.txt  KJ4-KA600.txt  Temperatures.txt
docs/TechnicalNotes/HeadInfo/Kyocera/KY0360/: ConfigParameters.txt  HeadEepromData.txt  SelectHeadRevision.txt  WF_Info.txt
docs/TechnicalNotes/HeadInfo/Kyocera/KY0600_EX/: ConfigParameters.txt  HeadEepromData.txt  HeadSubTypes.txt  HeadVoltagesTemperatures.txt  WF_Info.txt
docs/TechnicalNotes/HeadInfo/Kyocera/KY1200RM/: ConfigParameters.txt  HeadEepromData.txt  HeadVoltagesTemperatures.txt  NozzleAdjust.txt  TickleMapping.txt  WF_Info.txt
docs/TechnicalNotes/HeadInfo/Kyocera/KY1200_MD/: ConfigParameters.txt  HeadEepromData.txt  HeadVoltagesTemperatures.txt  WF_Info.txt
docs/TechnicalNotes/HeadInfo/Ricoh/: RicohGen_Naming.txt
docs/TechnicalNotes/HeadInfo/Ricoh/RG4_RG5/: !readme.txt  Gen5_Gen5S_Gen6.txt  HDC_Layout_Notes.txt  HeadTemperature_Setting.txt  PageSpit.txt  (+2 more)
docs/TechnicalNotes/HeadInfo/Xerox/: ConfigParameters.txt  HeadEepromData.txt  HeadVoltagesTemperatures.txt  WF_Info.txt  debugging.txt
docs/TechnicalNotes/MeteorLogging/: PrintEngineLogging.txt
docs/TechnicalNotes/PccE/: HDC_PowerCtrl_via_GPIO.txt  HDC_ProblemsDetection.txt  PCC_CustomConfigSettings.txt  PCC_StatusTimestamps.txt  PccE_ID_Board.txt
docs/TechnicalNotes/PccV3/: PCC2E_BootMicroLedStates.txt  PCC2E_ConfigFiles.txt  PCC2E_FPGALedStates.txt
docs/TechnicalNotes/PrintEngine/: TicklingAndSpitting.txt
docs/TechnicalNotes/PrintEngine/LiveWaveformExport/: LiveVaveformExport.txt  plotEpsonS_WF.txt
docs/TechnicalNotes/TestApp/: Head_EEPROM.txt  Params_Signals.txt  PrintingMultiplePlanes.txt
docs/TechnicalNotes/Translator/: TranslatorSettings.txt
external_ressources/: cirlce_printing_algorith.py  fourier.js  math.ipynb  run_mat_octave.py  thread_turtle.py
includes/: Meteor.h  MeteorPath.h  PrinterInterface.h  SamplePrint.h  hardware_feedback.h  meteorAdapter.h  typedef.h
meteorAppSample/: MeteorCLS.xml  meteorApp.exe.recipe  meteorApp.vcxproj.FileListAbsolute.txt  vc142.idb
meteorAppSample/meteorApp.tlog/: CL.command.1.tlog
src/: Bitmaps.cpp  SamplePrint.cpp  main.cpp  meteorAdapter.cpp  stdafx.cpp
tools/: MRA_AddPrintJobReq.py  MRA_CurrentPrintJobStateReq.py  MRA_DownlinkListener.py  MRA_GenericCmd.py  MRA_GetHeadTemperature.py  MRA_PrintJobSingleStateReq.py  MRA_PrintMode.py  MRA_PrintOnDemandFastMask.py  MRA_PrintOnDemandRotation.py  MRA_SetSignal.py
x64/Debug/: MeteorCLS.xml  meteorApp.exe.recipe  meteorApp.ilk  meteorApp.vcxproj.FileListAbsolute.txt  vc142.idb  vc143.idb
x64/Debug/meteorApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  meteorApp.lastbuildstate
(+45 files in other folders)
